--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
   <!-- replace with your personal Font Awesome CDN link -->
   <script src="https://use.fontawesome.com/???.js"></script>
+  <script src="js/script.js"></script>
 </head>
 
 <body>
