--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
   </aside>
 
   <section>
-    <h2>Scarves</h2>
+    
+  
+    <h2 class="sortedscarves">Scarves</h2>
 
     <div class="item-container">
       <div class="item">
