adding form submit

--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
   <aside>
     <form>
       <label>Filter By:
-        <select name="filter"> 
+        <select name="filter" onsubmit="capture();"> 
           <option value="">Choose One</option>
           <option value="price">Price</option>
           <option value="name">Name</option>
         </select>
       </label>
 
-      <input type="submit" value="Sort">
+      <input type="submit" value="submit">
     </form>
   </aside>
 
