adding styles and font awesome icons media queries

--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
   <link rel="stylesheet" media="print" href="styles/print.css">
 
   <!-- replace with your personal Font Awesome CDN link -->
-  <script src="https://use.fontawesome.com/???.js"></script>
-  <script src="js/script.js"></script>
+  <script src="https://use.fontawesome.com/7c69adedf1.js"></script>
+  
+  <link href="https://fonts.googleapis.com/css?family=Sansita" rel="stylesheet">
 </head>
 
 <body>
@@ -20,10 +21,11 @@
       <ul>
         <li><a href="#">Hats</a></li>
         <li><a href="#">Gloves</a></li>
-        <li><a href="#">Scarves</a></li>
-        <li class="cart-info">
+        <li><a href="scarves.html">Scarves</a></li>
+        <a href="">
+          <li class="cart-info">
           <i class="fa fa-shopping-cart" aria-hidden="true"></i>
-        </li>
+        </li></a>
       </ul>
     </nav>
 
@@ -104,6 +106,11 @@
       </div>
     </div>
   </section>
+  <footer> 
+  <i class="fa fa-facebook-square fa-3x" aria-hidden="true"></i>
+  <i class="fa fa-instagram fa-3x" aria-hidden="true"></i>
+  
+  </footer>
 
   <script type="text/javascript" src="js/script.js"></script>
 </body>
